--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "repository": "https://github.com/fraction/base16-css.git",
   "author": "Christian Bundy <christianbundy@fraction.io>",
   "license": "AGPL-3.0",
-  "private": false
+  "private": false,
+  "main": "index.js",
+  "devDependencies": {
+    "require-style": "^1.1.0"
+  },
+  "scripts": {
+    "test": "node test.js"
+  }
 }
